# calorimetry-tools

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  convert_to_tse.py  convert_to_tse_alt.py  main.py  pyproject.toml  requirements.txt  setup.py  test.py  test_alt.py  test_combine.py
.github/workflows/: pypi.yaml  pytest.yaml
calorimetry_tools/: __init__.py  get_mean_traces.py  util.py  write_tse.py
tests/: test_write_tse.py
