[tool.black]
line-length = 80

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calorimetry_tools"
version = "0.1.0"
description = "Calorimetry tools"
authors = [ { name = "Stephan Grein", email = "stephan.grein@uni-bonn.de" }]
license = "MIT"
readme = "README.md"
requires-python = ">3.10"
dynamic = ["dependencies"]
